<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/saloonRefresher"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saloonList.SaloonItemFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/contentDescriptionSaloonDisplayImage"
                android:id="@+id/saloonItemDisplayImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_bull"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <RelativeLayout
                android:id="@+id/relativeLayoutSaloonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saloonItemDisplayImage"
                app:layout_constraintVertical_bias="0.02"
                >

                <TextView
                    android:id="@+id/saloonItemNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_toStartOf="@+id/switchSaloonStatusRadioGroup"
                    android:layout_alignParentStart="true"
                    android:maxWidth="300dp"
                    android:text="@string/placeHolderSaloonName"
                    android:textColor="#DDDDDD"
                    android:textSize="20sp" />

                <RadioGroup

                    android:id="@+id/switchSaloonStatusRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"

                    android:layout_alignTop="@+id/saloonItemNameTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"

                    android:orientation="horizontal"
                    android:background="@drawable/bg_toggle_out_line_open">

                    <RadioButton
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginStart="1dp"
                        android:id="@+id/saloonOpenButton"
                        android:background="@drawable/bg_toggle_widget_open"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:checked="true"
                        android:text="@string/placeHolderOpenStatus"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:layout_marginEnd="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="1dp"
                        android:id="@+id/saloonCloseButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_toggle_widget_closed"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/placeHolderClosedStatus"
                        android:textColor="@color/white" />

                </RadioGroup>

                <TextView
                    android:id="@+id/saloonItemAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/saloonItemNameTextView"
                    android:layout_marginTop="15dp"
                    android:text="@string/placeHolderSaloonAddress"
                    android:textColor="#DDDDDD"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/secondRelativeLayoutSaloonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayoutSaloonItem"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ratingSaloonItemImageView"
                    android:layout_width="160dp"
                    android:layout_height="40dp"

                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="20dp"

                    android:contentDescription="@string/contentDescriptionRating"
                    android:src="@drawable/ic_rating_three_stars" />

                <TextView
                    android:id="@+id/saloonItemReviewCountText"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeHolderReviewCount"
                    android:textColor="@color/white"
                    android:textSize="16sp"

                    android:layout_alignTop="@+id/saloonItemReviewCountImage"
                    android:layout_alignBottom="@+id/saloonItemReviewCountImage"
                    android:layout_toStartOf="@+id/saloonItemReviewCountImage"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"/>

                <ImageView
                    android:contentDescription="@string/contentDescriptionReviewCount"
                    android:id="@+id/saloonItemReviewCountImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"

                    android:layout_alignEnd="@+id/ratingSaloonItemImageView"
                    android:layout_below="@+id/ratingSaloonItemImageView"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"

                    app:srcCompat="@drawable/ic_baseline_rate_review_24"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saloonOpenTimingButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"

                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@+id/ratingSaloonItemImageView"
                    android:backgroundTint="@color/white"

                    android:text="@string/buttonSaloonOpenTimings"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/saloonItemShareImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_toStartOf="@+id/appointmentSaloonItemButton"
                    android:layout_alignTop="@+id/saloonOpenTimingButtons"
                    android:layout_alignBottom="@+id/appointmentSaloonItemButton"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="10dp"

                    app:srcCompat="@drawable/ic_baseline_share_40"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appointmentSaloonItemButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/saloonOpenTimingButtons"

                    android:layout_alignStart="@+id/saloonOpenTimingButtons"
                    android:layout_alignEnd="@+id/saloonOpenTimingButtons"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/teal_700"

                    android:clickable="true"
                    android:contentDescription="@string/contentDescriptionAppointment"
                    android:focusable="true"

                    android:text="@string/buttonAppointment"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabInputSaloonItem"
                style="@style/Widget.MaterialComponents.TabLayout.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"

                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondRelativeLayoutSaloonItem"

                app:tabBackground="@color/black"
                app:tabIconTint="@color/teal_700"
                app:tabIndicatorColor="@color/teal_700"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/MineCustomTabText"
                app:tabTextColor="#CCCCCC">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/ViewPagerSaloonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabInputSaloonItem"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>